Adding Db Models in ModelsControll
-Merge Model and Control -> ModelsControll
-Add requrement.txt
-Modify appsetting.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;User Id=postgres;Password=pwd;Database=nutrinyan"
+        "DefaultConnection": "port=5432 user=postgres password=tIdakIngat dbname=AdaTour"
     }
+
 }
